kubernetes/argocd/applications/media/apps/nzbget/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://nzbget.vaderrp.com"
      dns: ""
      client:
        dns-resolver: "tcp://192.168.7.7:53"
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: NZBGet
    gethomepage.dev/icon: nzbget.png
    gethomepage.dev/href: https://nzbget.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=nzbget
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - nzbget.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - group: ""
          kind: Service
          name: nzbget
          port: 6789
          weight: 1
